# ESD_Project

./: .gitignore  .gitmodules  Cargo.toml  README.md  package-lock.json  snapshot.json  test.js  video.txt
frontend/: buy.html  clinic.html  contact.html  groomerProfilePage.html  index.html  index.js  package.json  pet.html  service.html
frontend - groomer/: aboutus.html  groomers.html  index.html
frontend - groomer/css/: groomers_display.css
frontend - groomer/frontend/groomerDashboard/startbootstrap-sb-admin-2-gh-pages/: appointments.html  index.html
frontend - groomer/groomerDashboard/: charts.html  tables.html
frontend - users view/: index.html  profile.html
frontend - users view/dog_hotel_login/: index.html
frontend - users view/stripeTest/: checkout.html
frontend/public/: aboutus.html  groomers.html  index.html  profile.html
frontend/public/account/: logingroomer.html  loginuser.html  registergroomer.html  registeruser.html
frontend/public/css/: groomers_display.css  style.css
frontend/public/frontend/groomerDashboard/startbootstrap-sb-admin-2-gh-pages/: currentAppointments.html
frontend/public/frontend/groomerDashboard/startbootstrap-sb-admin-2-gh-pages/js/demo/: chart-bar-demo.js
frontend/public/groomerDashboard/: currentAppointments.html  futureAppointments.html  index.html  pastReviews.html  profile.html
frontend/public/groomerDashboard/css/: style.css
frontend/public/js/: cookies.js
microservices/: docker-compose-mac-m1.yml  docker-compose.yml
microservices/appointments/: Cargo.toml  Dockerfile  recipe.json
microservices/appointments/src/: main.rs  schema.json
microservices/censorer/: Dockerfile  index.js  package-lock.json  package.json
microservices/comments/: Cargo.toml  Dockerfile  README.md  build.gradle  recipe.json
microservices/comments/src/: main.rs  query.graphql  schema.json
microservices/comments/src/main/java/com/example/esdproject/comments/: Comments.java  CommentsApplication.java  CommentsController.java  CommentsNotFoundAdvice.java  CommentsNotFoundException.java  CommentsRepository.java  InvalidRatingAdvice.java  InvalidRatingException.java
microservices/comments/src/main/resources/: application.properties
microservices/comments/src/test/java/com/example/esdproject/comments/: CommentsApplicationTests.java
microservices/emailsender/: pyproject.toml
microservices/example_microservice/: Dockerfile  index.py  requirements.txt
microservices/groomer/: .env  Dockerfile  app.js  index.html  index.js  index.py  index.ts  info.py  models.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
microservices/groomer/controllers/Hotel/: Authentication.js
microservices/groomer/models/: groomer.js  hotels.js
microservices/groomer/prisma/: schema.prisma
microservices/groomer/routes/Hotel/: Authentication.js
microservices/groomer/views/: hotels.ejs
microservices/groomer/views/partials/: footer.ejs  header.ejs
microservices/groomerAdmin/: groomer.py  groomer.sql
microservices/groomerpy/: index.py  pyproject.toml  requirements.txt
microservices/logging/: Cargo.toml  Dockerfile
microservices/logging/src/: main.rs
microservices/orchestrator/: Dockerfile  input.py  main.py  output.py  pyproject.toml  requirements.txt
microservices/phonesender/: index.py  pyproject.toml  requirements.txt
microservices/smssender/: Dockerfile  index.py  pyproject.toml  requirements.txt
microservices/stripe/: Dockerfile  requirements.txt  server.py
microservices/stripe/public/: booking_form.html  checkout.html  refund.html
microservices/stripe/templates/: base.html  checkout_form.html  custom_form.html  success_webhook.html
microservices/stripe/trash/: checkout.html
microservices/user/: Cargo.toml  Dockerfile  index.py  pyproject.toml  recipe.json  requirements.txt  schema.graphql
microservices/user/src/: main.rs
public/: aboutus.html  groomers.html  index.html  profile.html
public/account/: logingroomer.html  loginuser.html  register.html  registergroomer.html  registeruser.html
public/css/: groomers_display.css
public/dog_hotel_login/css/: main.css
public/frontend/groomerDashboard/startbootstrap-sb-admin-2-gh-pages/: currentAppointments.html  futureAppointments.html  index.html  pastReviews.html  profile.html  tables.html  utilities-animation.html
public/frontend/groomerDashboard/startbootstrap-sb-admin-2-gh-pages/js/demo/: chart-area-demo.js
public/js/: groomer.js
stripeFrontend/: .env.local.example  package.json
stripeFrontend/components/: CheckOutForm.tsx  PaymentPage.tsx
stripeFrontend/pages/: pay.tsx  receipt.tsx
stripeFrontend/pages/api/: createPaymentIntent.ts  getPaymentInfo.ts
