[tool.poetry]
name = "emailsender"
version = "0.1.0"
description = ""
authors = ["tropicbliss <48951297+tropicbliss@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"
twilio = "^7.16.5"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.2"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
