[tool.poetry]
name = "groomer"
version = "0.1.0"
description = ""
authors = ["tropicbliss <48951297+tropicbliss@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
mysql-connector-python = "^8.0.32"
string-validator = "^0.1.7"
flask-expects-json = "^1.7.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
autopep8 = "^2.0.1"
pylint-flask = "^0.6"
pylint-flask-sqlalchemy = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
