[package]
name = "logging"
version = "0.1.0"
edition = "2021"
description = "Logging microservice for ESD Project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-global-executor = "2.3.1"
futures-lite = "1.12.0"
lapin = { version = "2.1.1", features = ["rustls-webpki-roots-certs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
